Add 1- and 2-col layout. Add text to About page.

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,9 @@
 destination: ./_site
-exclude:     ['CNAME', 'README.md', 'requirements.txt', 'templates', 'TODO.txt', '*.py']
+exclude:
+[
+	'CNAME',
+	'README.md',
+	'requirements.txt',
+	'TODO.txt',
+	'*.py'
+]
