exclude files from _site

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,12 @@
 destination: ./_site
 exclude: [
 	'CNAME',
-	'README.md'
+	'README.md',
+    'Gemfile',
+    'Gemfile.lock',
+    '*.sublime-*',
+    'bin/',
+    'less/'
 ]
 markdown: rdiscount
 permalink: /posts/:title
