fix unsupported highlighter error with GitHub

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ exclude: [
 
 # Dependencies
 markdown:    rdiscount
-highlighter: false
+highlighter: pygments
 
 # Permalinks
 permalink:           pretty
