--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -4,14 +4,16 @@ label: Software Engineer
 email: jberberich@gmail.com
 biography:
     - >
-        I am a full-stack, polyglot web developer with over ten years of
-        experience programming, designing, and debugging software. On my recent
-        projects, I've enjoyed learning PHP and Symfony on the fly, and I
-        typically use Python on my personal projects The remainder of my
-        professional work has been in C#.
+        I am a full stack web developer with over ten years of experience
+        building software for companies of all sizes in a variety of industries.
     - >
-        I'm seeking a senior role on a web development team where I can
-        contribute code on both the front- and back-ends.
+        Currently, I enjoy working in PHP and JavaScript using Symfony and
+        Backbone, and I never start a project without Vagrant.
+    - >
+        In the future, I'd be interested in taking both Ruby on Rails and
+        Laravel deeper than the simple CRUD apps I've built to vet them, and
+        I'd love to get comfortable enough with Docker to be able to replace
+        Vagrant.
 
 skills:
     - type: Languages
@@ -21,7 +23,7 @@ skills:
     - type: Databases
       items: [MySQL, MSSQL]
     - type: Tools & Technologies
-      items: [Git, Vagrant, AWS, Jenkins, Docker, Jekyll, GitHub, Bitbucket, JIRA]
+      items: [Git, Vagrant, AWS, Jenkins, Docker, Jekyll]
     - type: CMSs
       items: [Drupal, Wordpress]
 
@@ -29,9 +31,9 @@ work:
     - company: KnowledgeWorks
       location: Cincinnati, OH
       website: "http://knowledgeworks.org/"
-      position: Contract Software Engineer
+      position: Freelance Software Engineer
       started_on: 2013-10-17
-      ended_on: Present
+      ended_on: Current
       accomplishments:
         - Rewrote a key HTML table of student grades in a learning management system to use jQuery DataTables and Twig, and refactored back-end code to be more maintainable and less coupled to Drupal.
         - Wrote a report-building application in Symfony 2 that was designed to ease the production of reports for leaders of competency-based learning programs.
