remove pygments highlighter

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ exclude: [
 
 # Dependencies
 markdown:    rdiscount
-highlighter: pygments
+# highlighter: pygments
 
 # Permalinks
 permalink:           pretty
