--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 title:       John Berberich
 tagline:     Foo
-description: A fantastic blog that is fantastic.
-url:         http://johnberberich.com
-baseurl:     /
+description: > # this means to ignore newlines until "baseurl:"
+  The website of John Berberich
+url:         "http://johnberberich.com"
+baseurl:     ""
 
 google_analytics:         UA-35929716-1
 google_site_verification: oTmLIeNN96Rw9Xv70CTpsVzkQJMCuTqe3GllV01s-5A
